@@ -936,7 +936,8 @@ impl_tasklet_run_remove(PyTaskletObject *task, int remove);
 int
 PyTasklet_Run_nr(PyTaskletObject *task)
 {
-    (_PyRuntime.st.try_stackless) = 1;
+    PyThreadState *ts = PyThreadState_GET();
+    STACKLESS_PROPOSE_ALL(ts);
     return slp_return_wrapper(impl_tasklet_run_remove(task, 0));
 }
 
@@ -1061,7 +1062,8 @@ PyTasklet_Switch_M(PyTaskletObject *task)
 int
 PyTasklet_Switch_nr(PyTaskletObject *task)
 {
-    (_PyRuntime.st.try_stackless) = 1;
+    PyThreadState *ts = PyThreadState_GET();
+    STACKLESS_PROPOSE_ALL(ts);
     return slp_return_wrapper(impl_tasklet_run_remove(task, 1));
 }
 
