@@ -9,6 +9,11 @@ What's New in Stackless 3.X.X?
 
 *Release date: 20XX-XX-XX*
 
+- https://github.com/stackless-dev/stackless/issues/200
+  Fix a bug in the C-API functions PyTasklet_Run_nr() and
+  PyTasklet_Switch_nr(). Under exotic conditions the functions could
+  cause undefined behavior.
+
 - https://github.com/stackless-dev/stackless/issues/196
   Stackless can now pickle coroutine_wrapper objects.
 
